# simurgh-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_github_oauth.py  0003_google_oauth.py  0004_atlassian_oauth.py  0005_jira_export.py  0006_confluence_export.py
backend/app/: main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/endpoints/: auth.py  debates.py  documents.py  evaluation.py  exit_survey.py  experiments.py  projects.py  proposals.py  public.py  stakeholders.py  thesis_metrics.py
backend/app/api/v1/endpoints/admin/: __init__.py  analytics.py  health.py  projects.py  proposals.py  settings.py  token_usage.py  users.py
backend/app/api/v1/endpoints/experiment/: __init__.py  experiment_dashboard.py  experiment_debates.py  experiment_exit_surveys.py  experiment_helpers.py  experiment_manage.py  experiment_participants.py  experiment_questionnaires.py  experiment_rq_summary.py
backend/app/core/: celery_app.py  config.py  email.py  encryption.py  exceptions.py  logging_config.py  parsers.py  security.py
backend/app/db/: init_db.py  seed_data.py  seed_scenarios.py  session.py
backend/app/middleware/: maintenance.py  rate_limit.py
backend/app/models/: __init__.py  atlassian_credential.py  chunk.py  debate.py  exit_survey.py  links.py  participant.py  persona_coding.py  project.py  prompt.py  proposal.py  questionnaire.py  settings.py  stakeholder.py  token.py  token_usage.py  user.py
backend/app/research_tools/: thematic_analysis.py
backend/app/schemas/: analysis.py  chunk.py  debate.py  exit_survey.py  integration.py  participant.py  persona.py  persona_coding.py  project.py  prompt.py  proposal.py  questionnaire.py  settings.py  stakeholder.py  token_usage.py  user.py
backend/app/services/: __init__.py  ai_service.py  atlassian_oauth_service.py  baseline_service.py  confluence_adapter.py  debate_service.py  document_service.py  github_oauth_service.py  google_oauth_service.py  jira_adapter.py  pdf_generator.py  persona_coding_service.py  persona_service.py  project_service.py  proposal_service.py  proposal_tasks.py  questionnaire_service.py  stakeholder_service.py  system_service.py  user_service.py  vector_service.py
backend/app/services/ai/: __init__.py  base.py  proposal_generation.py  token_usage.py
backend/scripts/: create_superuser.py  requeue_pending_documents.py
backend/tests/: conftest.py
backend/tests/api/v1/: conftest.py  test_admin.py  test_auth.py  test_debates.py  test_documents.py  test_evaluation.py  test_exit_survey.py  test_experiment_data.py  test_experiments.py  test_projects.py  test_proposals.py  test_public.py  test_stakeholders.py  test_thesis_metrics.py
backend/tests/e2e/: conftest.py  test_experiment_flow.py  test_proposal_debate_flow.py  test_stakeholder_analysis_flow.py
backend/tests/fixtures/: __init__.py  debates.py  documents.py  projects.py  proposals.py  stakeholders.py  users.py
backend/tests/integration/: conftest.py
backend/tests/integration/db/: test_migrations.py  test_session.py
backend/tests/integration/services/: test_i_debate_service.py  test_i_document_service.py  test_i_project_service.py  test_i_proposal_service.py  test_i_stakeholder_service.py  test_i_user_service.py  test_questionnaire_service.py
backend/tests/unit/core/: test_config.py  test_encryption.py  test_exceptions.py  test_parsers.py  test_security.py
backend/tests/unit/middleware/: test_maintenance.py  test_rate_limit.py
backend/tests/unit/services/: test_ai_service.py  test_baseline_service.py  test_debate_service.py  test_document_service.py  test_persona_coding_service.py  test_project_service.py  test_proposal_service.py  test_stakeholder_service.py  test_user_service.py  test_vector_service.py
backend/tests/utils/: __init__.py  async_helpers.py  db_helpers.py  mock_anthropic.py
docs/: proposal-generation.md
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DebatePanel.tsx  DebateTranscript.tsx  ErrorBoundary.tsx  GeneratorNavigation.tsx  LandingVisuals.tsx  MendelowMatrix.tsx  MermaidDiagram.tsx  ProjectCard.tsx  SimurghMark.tsx  StakeholderRow.tsx  TagInput.tsx  VariationCard.tsx
frontend/src/config/: experiment.ts  permissions.ts
frontend/src/context/: AuthContext.tsx
frontend/src/data/: staticExperimentData.ts
frontend/src/hooks/: useChatSession.ts  useDebatePoller.ts  useProjectMissions.ts  useProposalPoller.ts
nginx/: default.conf
scripts/: backup.sh  restore.sh
(+62 files in other folders)
