[tool.poetry]
name = "simurgh-ai"
version = "0.1.0"
description = "A versatile AI agent framework for building intelligent applications with ease."
authors = ["rmusayevr <rmusayevr19@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "==2.6.1"
aiohttp = "==3.13.3"
aiosignal = "==1.4.0"
aiosmtplib = "^5.0.0"
resend = "^2.0.0"
alembic = "==1.18.1"
amqp = "==5.3.1"
annotated-doc = "==0.0.4"
annotated-types = "==0.7.0"
anthropic = "==0.76.0"
anyio = "==4.12.1"
asyncpg = "==0.31.0"
atlassian-python-api = "==4.0.7"
attrs = "==25.4.0"
bcrypt = "==5.0.0"
beautifulsoup4 = "==4.14.3"
billiard = "==4.2.4"
celery = "==5.6.2"
certifi = "==2026.1.4"
cffi = "==2.0.0"
cfgv = "==3.5.0"
charset-normalizer = "==3.4.4"
click = "==8.3.1"
click-didyoumean = "==0.3.1"
click-plugins = "==1.1.1.2"
click-repl = "==0.3.0"
coloredlogs = "==15.0.1"
cryptography = "==46.0.3"
Deprecated = "==1.3.1"
diskcache = "==5.6.3"
distlib = "==0.4.0"
distro = "==1.9.0"
dnspython = "==2.8.0"
docstring_parser = "==0.17.0"
ecdsa = "==0.19.1"
email-validator = "==2.3.0"
fastapi = "==0.135.1"
fastembed = "==0.7.4"
filelock = "==3.20.3"
flatbuffers = "==25.12.19"
frozenlist = "==1.8.0"
fsspec = "==2026.1.0"
greenlet = "==3.3.0"
h11 = "==0.16.0"
hf-xet = "==1.2.0"
httpcore = "==1.0.9"
httptools = "==0.7.1"
httpx = "==0.28.1"
huggingface_hub = "==1.3.2"
humanfriendly = "==10.0"
identify = "==2.6.16"
idna = "==3.11"
iniconfig = "==2.3.0"
instructor = "==1.14.4"
Jinja2 = "==3.1.6"
jiter = "==0.11.1"
jmespath = "==1.0.1"
kombu = "==5.6.2"
loguru = "==0.7.3"
Mako = "==1.3.10"
markdown-it-py = "==4.0.0"
MarkupSafe = "==3.0.3"
mdurl = "==0.1.2"
mmh3 = "==5.2.0"
mpmath = "==1.3.0"
multidict = "==6.7.0"
nodeenv = "==1.10.0"
numpy = "==2.4.1"
oauthlib = "==3.3.1"
onnxruntime = "==1.23.2"
openai = "==2.15.0"
packaging = "==25.0"
passlib = "==1.7.4"
pgvector = "==0.4.2"
pillow = "==11.3.0"
platformdirs = "==4.5.1"
pluggy = "==1.6.0"
"prompt-toolkit" = "==3.0.52"
protobuf = "==6.33.4"
"psycopg2-binary" = "==2.9.11"
py_rust_stemmers = "==0.1.5"
pyasn1 = "==0.6.1"
pycparser = "==2.23"
pydantic = "==2.12.5"
"pydantic-settings" = "==2.12.0"
pydantic_core = "==2.41.5"
Pygments = "==2.19.2"
pypdf = "==6.6.0"
"python-dateutil" = "==2.9.0.post0"
"python-dotenv" = "==1.2.1"
"python-jose" = "==3.5.0"
"python-multipart" = "==0.0.21"
PyYAML = "==6.0.3"
redis = {extras = ["async"], version = "^5.0.0"}
reportlab = "==4.4.9"
requests = "==2.32.5"
"requests-oauthlib" = "==2.0.0"
rich = "==14.2.0"
rsa = "==4.9.1"
shellingham = "==1.5.4"
six = "==1.17.0"
sniffio = "==1.3.1"
soupsieve = "==2.8.1"
SQLAlchemy = "==2.0.45"
sqlmodel = "==0.0.31"
starlette = "==0.50.0"
structlog = "==25.5.0"
sympy = "==1.14.0"
tenacity = "==9.1.2"
tokenizers = "==0.22.2"
tqdm = "==4.67.1"
ty = "==0.0.12"
typer = "==0.21.1"
"typer-slim" = "==0.21.1"
"typing-inspection" = "==0.4.2"
typing_extensions = "==4.15.0"
tzdata = "==2025.3"
tzlocal = "==5.3.1"
urllib3 = "==2.6.3"
uvicorn = "==0.40.0"
uvloop = "==0.22.1"
vine = "==5.1.0"
virtualenv = "==20.36.1"
watchfiles = "==1.1.1"
wcwidth = "==0.2.14"
websockets = "==16.0"
wrapt = "==2.0.1"
yarl = "==1.22.0"
python-docx = "^1.2.0"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.2"
"pytest-asyncio" = "==1.3.0"
"pytest-mock" = "==3.15.1"
ruff = "==0.14.13"
"pre-commit" = "==4.5.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==================== Pytest Configuration ====================

[tool.pytest.ini_options]
pythonpath = ["."]
# asyncio_mode = "auto" means every async test function is automatically
# treated as an asyncio coroutine — no need for @pytest.mark.asyncio decorators.
asyncio_mode = "auto"

# Test discovery roots
testpaths = ["tests"]

# Test file and function naming conventions
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output verbosity and formatting
addopts = [
    "--tb=short",       # Shorter tracebacks (use --tb=long for debugging)
    "-ra",              # Show summary of all non-passing tests at the end
    "--strict-markers", # Fail if unknown markers are used
]

# Custom markers — declare here to avoid PytestUnknownMarkWarning
markers = [
    "unit: Pure unit tests (no DB, no network)",
    "integration: Integration tests (requires PostgreSQL + Redis)",
    "api: API / HTTP layer tests (requires running FastAPI app)",
    "e2e: End-to-end flow tests (requires full Docker stack)",
    "slow: Tests that take > 2 seconds",
]

# ==================== Coverage Configuration ====================

[tool.coverage.run]
source = ["app"]
omit = [
    "app/db/seed_*.py",   # Seed scripts are not application logic
    "app/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
]